--- a/design.html
+++ b/design.html
@@ -12,8 +12,8 @@
                                    	时间：2016-06-03
                                    	描述：渐变背景色
                                    -->
-	<div class="">
-		
+	<div class="grayscale">
+		<img src="img/close_one.png"/>
 	</div>
 	</body>
 	<script type="text/javascript">
