--- a/design.html
+++ b/design.html
@@ -10,15 +10,59 @@
                                    <!--
                                    	作者：ep_ling@163.com
                                    	时间：2016-06-03
-                                   	描述：渐变背景色
+                                   	描述：渐变背景色，可各种渐变
                                    -->
+	<!--增加灰度-->
 	<div class="grayscale">
 		<img src="img/close_one.png"/>
+	</div>
+	
+	<canvas id="ones" width="200" height="200"style="border:1px solid #c3c3c3;">
+Your browser does not support the canvas element.
+	</canvas>
+	
+	<p>手风琴效果：</p>
+	<div class="img_look">
+		<ul>
+			<li>
+				<img src="img/five.jpg"/>
+			</li>
+			<li>
+				<img src="img/three.jpg"/>
+			</li>
+			<li>
+				<img src="img/four.jpg"/>
+			</li>
+			<li>
+				<img src="img/one.jpg"/>
+			</li>
+			<li>
+				<img src="img/two.jpg"/>
+			</li>
+		</ul>
+		
+		
 	</div>
 	</body>
 	<script type="text/javascript">
 		window.onload=function(){}//js初始化
 //		$(document).ready(function(){})//jQ初始化
 //		$(function(){})//jQ简化初始化
+		var c=document.getElementById("ones");
+		var cxt=c.getContext("2d");
+		cxt.moveTo(10,10);
+		cxt.lineTo(150,50);
+		cxt.lineTo(10,50);
+		cxt.stroke();
+		//画圆
+		cxt.fillStyle="#FF0000";
+		cxt.beginPath();
+		cxt.arc(90,18,15,0,Math.PI*2,true);
+		cxt.closePath();
+		cxt.fill();
+		//
+		var img=new Image()
+		img.src="img/close_one.png"
+		cxt.drawImage(img,30,60);
 	</script>
 </html>
