--- a/design.html
+++ b/design.html
@@ -40,8 +40,15 @@ Your browser does not support the canvas element.
 				<img src="img/two.jpg"/>
 			</li>
 		</ul>
-		
-		
+	</div>
+	<!--加载效果-->
+	<div class="box">
+	<div class="loader">
+		<div class="loading-1">
+			<i></i>
+			<i></i>
+			<i></i>
+		</div>
 	</div>
 	</body>
 	<script type="text/javascript">
