字体倒影效果

--- a/design.html
+++ b/design.html
@@ -20,7 +20,9 @@
 	<canvas id="ones" width="200" height="200"style="border:1px solid #c3c3c3;">
 Your browser does not support the canvas element.
 	</canvas>
-	
+	<div class="dy">
+		倒影效果
+	</div>
 	<p>手风琴效果：</p>
 	<div class="img_look">
 		<ul>
