--- a/design.html
+++ b/design.html
@@ -6,6 +6,14 @@
 	</head>
 	<link rel="stylesheet" type="text/css" href="css/design.css"/>
 	<body>
+		<div class="bar">
+			…
+		</div>
+		<!--
+        	作者：ep_ling@163.com
+        	时间：2016-06-20
+        	描述：
+        -->
 		<div class="bgcolor"></div>
                                    <!--
                                    	作者：ep_ling@163.com
@@ -21,8 +29,14 @@
 Your browser does not support the canvas element.
 	</canvas>
 	<div class="dy">
+                    <!--
+                    	作者：ep_ling@163.com
+                    	时间：2016-06-20
+                    	描述：文字倒影的效果
+                    -->
 		倒影效果
 	</div>
+	
 	<p>手风琴效果：</p>
 	<div class="img_look">
 		<ul>
